--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scanner Shop</title>
+  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -35,7 +36,7 @@
     <!-- View: Scanner (Default) -->
     <section id="view-scanner" class="view-section active">
       <div class="scanner-frame">
-        <video id="video" muted playsinline></video>
+        <div id="reader" style="width:100%; height:100%;"></div>
 
         <div class="scan-overlay">
           <div class="scan-laser"></div>
