--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   </div>
 
   <!-- Initialization -->
-  <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/@zxing/library@latest"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script type="module" src="script.js"></script>
 </body>
