--- a/shop.html
+++ b/shop.html
@@ -27,8 +27,7 @@
         <!-- Table will be rendered here by JS -->
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
