--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
 
   <!-- Initialization -->
   <script type="text/javascript" src="https://unpkg.com/@zxing/library@latest"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 
 </html>
