--- a/forget-password.html
+++ b/forget-password.html
@@ -14,12 +14,12 @@
     <div class="login-wrapper" id="reset-form-container">
         <h2 class="login-title">Reset Password</h2>
 
-        <!-- This form only works when accessed via Supabase email link -->
         <div id="loading-state" style="text-align: center; padding: 20px;">
             <p style="color: #aaa;">Verifying reset link...</p>
         </div>
 
         <div id="reset-form" style="display: none;">
+            <div style="text-align:center; margin-bottom:15px; color:#aaa;" id="email-label"></div>
             <div class="input-group">
                 <input type="password" id="new-password" placeholder="New Password" required>
             </div>
@@ -56,143 +56,106 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script>
-        // --- CONFIG ---
-        const SUPABASE_URL = 'https://suwbojgdhcpuaqmiqmkg.supabase.co';
-        const SUPABASE_ANON_KEY = 'sb_publishable_Cd3s159DP-FKWCWmnHHA8w_hi9_7wh_';
+    <!-- Use Type Module to access window.Auth logic from script.js -->
+    <script type="module" src="script.js"></script>
 
-        const { createClient } = window.supabase;
-        const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY, {
-            auth: {
-                storage: window.localStorage,
-                autoRefreshToken: true,
-                persistSession: true,
-                detectSessionInUrl: true
-            }
-        });
+    <script type="module">
+        // --- LOGIC ---
+        // Wait for script.js to load its global methods
+        // Since both are modules, we might need a small delay or event if logic isn't immediate, 
+        // but window.Auth is set in DOMContentLoaded of script.js usually, or top level.
+        // Let's rely on window.Auth being available after module load.
 
-        // UI Elements
-        const loadingState = document.getElementById('loading-state');
-        const resetForm = document.getElementById('reset-form');
-        const errorState = document.getElementById('error-state');
-        const successState = document.getElementById('success-state');
-        const feedbackEl = document.getElementById('reset-feedback');
+        document.addEventListener('DOMContentLoaded', async () => {
+            // UI Elements
+            const loadingState = document.getElementById('loading-state');
+            const resetForm = document.getElementById('reset-form');
+            const errorState = document.getElementById('error-state');
+            const successState = document.getElementById('success-state');
+            const feedbackEl = document.getElementById('reset-feedback');
+            const emailLabel = document.getElementById('email-label');
 
-        // Check for valid reset token/session
-        async function init() {
-            console.log("[Reset Password] Initializing...");
-            console.log("[Reset Password] URL Hash:", window.location.hash);
+            // Get oobCode from URL
+            const urlParams = new URLSearchParams(window.location.search);
+            const oobCode = urlParams.get('oobCode');
 
-            // Check if URL contains recovery tokens
-            const hash = window.location.hash;
-            const hasRecoveryToken = hash.includes('access_token') || hash.includes('type=recovery');
+            console.log("[Reset] oobCode found:", oobCode);
 
-            console.log("[Reset Password] Has recovery token in URL:", hasRecoveryToken);
-
-            if (hasRecoveryToken) {
-                // Give Supabase time to process the token
-                console.log("[Reset Password] Recovery token found, waiting for Supabase to process...");
+            if (!oobCode) {
+                loadingState.style.display = 'none';
+                errorState.style.display = 'block';
+                return;
             }
 
-            // Listen for auth state changes (PASSWORD_RECOVERY event)
-            supabase.auth.onAuthStateChange((event, session) => {
-                console.log("[Reset Password] Auth Event:", event, session);
+            // Verify Code
+            // Need to wait for window.Auth to be available if script.js loads async
 
-                if (event === 'PASSWORD_RECOVERY') {
-                    console.log("[Reset Password] PASSWORD_RECOVERY event received!");
-                    loadingState.style.display = 'none';
-                    resetForm.style.display = 'block';
-                } else if (event === 'SIGNED_IN' && hasRecoveryToken) {
-                    // Sometimes Supabase fires SIGNED_IN instead of PASSWORD_RECOVERY
-                    console.log("[Reset Password] SIGNED_IN with recovery token - showing form");
-                    loadingState.style.display = 'none';
-                    resetForm.style.display = 'block';
+            // Simple check loop
+            let attempts = 0;
+            while (!window.Auth && attempts < 20) {
+                await new Promise(r => setTimeout(r, 100));
+                attempts++;
+            }
+
+            if (!window.Auth) {
+                loadingState.style.display = 'none';
+                feedbackEl.textContent = "Error loading auth system.";
+                return;
+            }
+
+            const verifyRes = await window.Auth.verifyResetCode(oobCode);
+            if (verifyRes.error) {
+                console.error("Verify Error:", verifyRes.error);
+                loadingState.style.display = 'none';
+                errorState.style.display = 'block';
+            } else {
+                console.log("Verified Email:", verifyRes.email);
+                loadingState.style.display = 'none';
+                resetForm.style.display = 'block';
+                if (verifyRes.email) emailLabel.textContent = `Resetting password for: ${verifyRes.email}`;
+            }
+
+            // Logic for Reset Button
+            document.getElementById('btn-reset').addEventListener('click', async () => {
+                const newPass = document.getElementById('new-password').value;
+                const confirmPass = document.getElementById('confirm-password').value;
+
+                if (!newPass || newPass !== confirmPass) {
+                    feedbackEl.textContent = "Passwords do not match or empty.";
+                    feedbackEl.className = "auth-message error";
+                    return;
+                }
+
+                if (newPass.length < 6) {
+                    feedbackEl.textContent = "Password too short (min 6 chars).";
+                    feedbackEl.className = "auth-message error";
+                    return;
+                }
+
+                const btn = document.getElementById('btn-reset');
+                btn.textContent = "Updating...";
+                btn.disabled = true;
+
+                const res = await window.Auth.confirmReset(oobCode, newPass);
+
+                if (res.error) {
+                    feedbackEl.textContent = res.error;
+                    feedbackEl.className = "auth-message error";
+                    btn.textContent = "Set New Password";
+                    btn.disabled = false;
+                } else {
+                    resetForm.style.display = 'none';
+                    successState.style.display = 'block';
                 }
             });
 
-            // Also check session immediately
-            const { data: { session }, error } = await supabase.auth.getSession();
-            console.log("[Reset Password] Initial session:", { session, error });
-
-            // If we have a session and URL has recovery token, show form
-            if (session && hasRecoveryToken) {
-                console.log("[Reset Password] Session exists with recovery token - showing form");
-                loadingState.style.display = 'none';
-                resetForm.style.display = 'block';
-                return;
-            }
-
-            // If no session and no recovery token, show error after a delay
-            if (!hasRecoveryToken) {
-                setTimeout(() => {
-                    if (loadingState.style.display !== 'none') {
-                        console.warn("[Reset Password] No valid recovery token found");
-                        loadingState.style.display = 'none';
-                        errorState.style.display = 'block';
-                    }
-                }, 2000);
-            }
-        }
-
-        // Show Password Toggle
-        document.getElementById('show-password').addEventListener('change', (e) => {
-            const type = e.target.checked ? 'text' : 'password';
-            document.getElementById('new-password').type = type;
-            document.getElementById('confirm-password').type = type;
+            // Toggle Password
+            document.getElementById('show-password').addEventListener('change', (e) => {
+                const type = e.target.checked ? 'text' : 'password';
+                document.getElementById('new-password').type = type;
+                document.getElementById('confirm-password').type = type;
+            });
         });
-
-        // Reset Password Handler
-        document.getElementById('btn-reset').addEventListener('click', async () => {
-            const btn = document.getElementById('btn-reset');
-            const newPass = document.getElementById('new-password').value;
-            const confirmPass = document.getElementById('confirm-password').value;
-
-            if (!newPass || !confirmPass) {
-                feedbackEl.textContent = "Please fill in both fields.";
-                feedbackEl.className = "auth-message error";
-                return;
-            }
-
-            if (newPass !== confirmPass) {
-                feedbackEl.textContent = "Passwords do not match.";
-                feedbackEl.className = "auth-message error";
-                return;
-            }
-
-            if (newPass.length < 6) {
-                feedbackEl.textContent = "Password must be at least 6 characters.";
-                feedbackEl.className = "auth-message error";
-                return;
-            }
-
-            btn.textContent = "Updating...";
-            btn.disabled = true;
-            feedbackEl.textContent = "";
-
-            try {
-                console.log("[Reset Password] Updating password...");
-                const { error } = await supabase.auth.updateUser({ password: newPass });
-
-                if (error) {
-                    throw error;
-                }
-
-                console.log("[Reset Password] Success!");
-                resetForm.style.display = 'none';
-                successState.style.display = 'block';
-
-            } catch (e) {
-                console.error("[Reset Password] Error:", e);
-                feedbackEl.textContent = "Error: " + (e.message || e);
-                feedbackEl.className = "auth-message error";
-                btn.textContent = "Set New Password";
-                btn.disabled = false;
-            }
-        });
-
-        // Initialize
-        init();
     </script>
 </body>
 
