--- a/login.html
+++ b/login.html
@@ -13,6 +13,8 @@
 
     <div class="login-wrapper">
         <h2 class="login-title">Login / Sign Up</h2>
+        <p style="text-align:center; color:#aaa; margin-bottom:20px; font-size:0.9rem;">(Please sign in/sign up if you
+            are a shop owner)</p>
 
         <form id="auth-form">
             <div class="input-group">
@@ -44,6 +46,15 @@
 
             <div class="divider">
                 <span>OR</span>
+            </div>
+
+            <div style="margin-top: 20px; text-align: center;">
+                <button type="button" id="btn-google-signin" class="btn-auth"
+                    style="background: white; color: #333; display:flex; align-items:center; justify-content:center; gap:10px; width:100%; border:1px solid #ddd;">
+                    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="20" height="20"
+                        alt="G">
+                    Sign in with Google
+                </button>
             </div>
 
             <div style="margin-top: 20px; text-align: center;">
