--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
   </div>
 
   <!-- Initialization -->
+  <script src="https://unpkg.com/barcode-detector@2.2.14/dist/index.umd.min.js"></script>
   <script type="module" src="script.js"></script>
 </body>
 
